Data_ingestion_2 completed

--- a/research/1_Data_ingestion.ipynb
+++ b/research/1_Data_ingestion.ipynb
@@ -69,10 +69,7 @@
     "        params_filepath=PARAMS_FILE_PATH,\n",
     "        schema_filepath=SCHEMA_FILE_PATH\n",
     "    ):\n",
-    "        # ensure inputs are Path objects (read_yaml requires Path)\n",
-    "        config_filepath = Path(config_filepath)\n",
-    "        params_filepath = Path(params_filepath)\n",
-    "        schema_filepath = Path(schema_filepath)\n",
+    "        \n",
     "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
@@ -137,39 +134,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-11 00:56:43,231 : INFO  : common : yaml file: config/config.yaml loaded successfully]\n",
-      "[2025-12-11 00:56:43,233 : INFO  : common : yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-11 00:56:43,234 : INFO  : common : yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-11 00:56:43,236 : INFO  : common : created directory at: artifacts]\n",
-      "[2025-12-11 00:56:43,237 : INFO  : common : created directory at: artifacts/data_ingestion]\n",
-      "[2025-12-11 00:56:44,355 : INFO  : 2856810451 : artifacts/data_ingestion/data.zip downloaded with following info: \n",
-      "Connection: close\n",
-      "Content-Length: 23329\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"c69888a4ae59bc5a893392785a938ccd4937981c06ba8a9d6a21aa52b4ab5b6e\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 8D97:A0972:EE7BD:1BB263:6939C970\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Wed, 10 Dec 2025 19:26:44 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-ccu830054-CCU\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1765394804.086293,VS0,VE284\n",
-      "Vary: Authorization,Accept-Encoding\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: e0934debbf7e433e7b33e11d5fe5e6f12841a2bb\n",
-      "Expires: Wed, 10 Dec 2025 19:31:44 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "]\n",
-      "[2025-12-11 00:56:44,360 : INFO  : 2856810451 : File extracted at : artifacts/data_ingestion/unziped_data]\n"
+      "[2025-12-11 01:13:22,942 : INFO  : common : yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-12-11 01:13:22,949 : INFO  : common : yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-11 01:13:22,950 : INFO  : common : yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-11 01:13:22,952 : INFO  : common : created directory at: artifacts]\n",
+      "[2025-12-11 01:13:22,955 : INFO  : common : created directory at: artifacts/data_ingestion]\n",
+      "[2025-12-11 01:13:22,956 : INFO  : 2856810451 : File already exists of path: artifacts/data_ingestion/data.zip]\n",
+      "[2025-12-11 01:13:22,958 : INFO  : 2856810451 : File extracted at : artifacts/data_ingestion/unziped_data]\n"
      ]
     }
    ],
